--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@types/lodash": "^4.14.178",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.10",
     "typescript": "4.5.4"
   }
 }
