--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
     "next": "12.0.7",
@@ -23,6 +24,7 @@
     "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "json-schema-to-ts": "^1.6.5",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.10",
     "typescript": "4.5.4"
