--- a/package.json
+++ b/package.json
@@ -14,18 +14,26 @@
     "lodash": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.5"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@types/react-redux": "^7.1.22",
+    "@types/redux-logger": "^3.0.9",
     "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "json-schema-to-ts": "^1.6.5",
     "postcss": "^8.4.5",
+    "redux-logger": "^3.0.6",
     "tailwindcss": "^3.0.10",
     "typescript": "4.5.4"
   }
