--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "17.0.38",
     "@types/react-redux": "^7.1.22",
     "@types/redux-logger": "^3.0.9",
+    "@types/redux-saga": "^0.10.5",
     "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
