--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.1.5"
+    "reselect": "^4.1.5",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-saga": "^0.10.5",
