--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "websocket": "^1.0.34",
+    "ws": "^8.4.2"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.0",
@@ -31,6 +33,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-saga": "^0.10.5",
+    "@types/websocket": "^1.0.5",
     "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
